--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
 
   <!-- l'insertion du script js ici--> 
-  <script src="js/script.js"></script> 
+  <script src="js/solutions_varaibles.js"></script> 
 </body>
 </html>
