--- a/index.html
+++ b/index.html
@@ -4,15 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/style.css">
     <title>Structure de Base de JS</title>
     
 </head>
 <body>
+  <nav>
+    DOM : Document Object Model
+  </nav>
+  <ul>
+    <li><a href="">Introduction</a></li>
+    <li><a href="">Première Partie</a></li>
+    <li><a href="">Deuxième Partie</a></li>
+    <li><a href="">Troisième Partie</a></li>
+    <li><a href="">Conclusion</a></li>
+  </ul>
     <h1>Introduction Javascript</h1>
+  <p id="introduction">
+      Lorem ipsum dolor <strong>Text important</strong> sit amet, consectetur adipisicing elit.
+      Sunt ipsa facere error repudiandae distinctio dolor dolores,
+        asperiores repellendus <span>Text du span</span> 
+        voluptates atque.
+    </p>
+  <p  class="p1 p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+    Sunt ipsa facere error repudiandae distinctio dolor dolores, 
+    asperiores repellendus voluptates atque.
+  </p>
+  <p class="p1 p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ipsa facere error repudiandae distinctio dolor dolores, asperiores repellendus voluptates atque.</p>
+  <p class="p1 p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ipsa facere error repudiandae distinctio dolor dolores, asperiores repellendus voluptates atque.</p>
 
+
+  <footer> @copyrigth 2022 : <a href="http://www.google.fr"></a> </footer>
+
+  <div>
+    <input type="button" value="Insert" class="btn btn1">
+    <input type="button" value="Update" class="btn btn2">
+    <input type="button" value="Delete" class="btn btn3">
+    <input type="button" value="Reset"  class="btn btn4">
+  </div>
 
 
   <!-- l'insertion du script js ici--> 
-  <script src="js/poo_exercice.js"></script> 
+  <script src="js/dom.js"></script> 
 </body>
 </html>
